fluxcd/apps/base/shynet/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shynet
  labels:
    enable-backup: "true"
  annotations:
    linkerd.io/inject: enabled
