fluxcd/apps/base/shynet/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shynet
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shynet
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 8080
      protocol: TCP
